Fix overlapping

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,8 +49,7 @@ h4 {/* html, css headings*/
 
 
 .container {
-  margin: 0 auto;
-  height: 900px;
+  margin: 0 auto 200px auto;
   /*background-color: rgba(255,255,255,0.5);*/
 }
 .col-md-6 {
@@ -62,10 +61,6 @@ h4 {/* html, css headings*/
 
 img.arrow {
   width: 40%;
-}
-
-.carousel-control {
-  padding-top: 20%;
 }
 
 .result {
